2006-02-04  Johan Dahlin  <jdahlin@async.com.br>

	* setup.py: Move kiwiwidgets to a subdirectory to mirror the layout
	of the installed resources.

2006-02-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List._setup_columns): If there are no
	expanded columns add a fake one after the last one.

2006-02-03  Patrick K O'Brien <pobrien@orbtech.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py: Use set_sort_column_id
	better with column ids. Simplify _on_column__clicked.
	When switching columns, always set to ascending sorting.
	Fixes #2420

2006-02-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dialogs.py: Really make it follow the HIG.
	Copied some code from eel-alert-dialog.c

	Import stuff from gazpacho, save, open, BaseDialog

2006-02-01  Patrick K O'Brien <pobrien@orbtech.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/argcheck.py:
	* tests/test_argcheck.py:

	Add parenthesis in percent checker, so it actually works and
	does not allow values above 100. Add unit tests.

=== 1.9.5 ===
2006-01-30  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

	* kiwi/environ.py (Library.__init__): Do not use an empty from list,
	it'll fail otherwise

=== 1.9.4 ===
2006-01-27  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

	* kiwi/proxies.py (Proxy.update_many): New method, like update but
	takes a sequence instead

2006-01-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxies.py (Proxy.remove_widget, Proxy.add_widget): Add, to
	be able to add and remove widgets dynamically. Based on patch
	by Henrique Romano

	* kiwi/ui/test/common.py (Base.get_object): New function, to avoid
	accessing private members from subclasses.

	* kiwi/ui/test/player.py (Player.delete_window): delete the
	reference to the window, so it can be destroyed properly and
	new windows can be put here, eg when we reopen the dialog.

2006-01-24  Henrique Romano  <henrique@async.com.br>
