@@ -1,3 +1,10 @@
+2006-02-08  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/widgets/list.py:
+	* tests/test_List.py:
+
+	Add klist::has-rows and tests.
+
 2006-02-04  Johan Dahlin  <jdahlin@async.com.br>
 
 	* setup.py: Move kiwiwidgets to a subdirectory to mirror the layout
